# factory-m8-derive

./: Cargo.toml  README.md
src/: lib.rs
tests/: integration_tests.rs  macro_tests.rs
